added the rest of the CRUD functions to the frontend

--- a/ui/templates/ui/list.html
+++ b/ui/templates/ui/list.html
@@ -120,6 +120,8 @@
 		}
 		var csrftoken = getCookie('csrftoken');
 
+		var activeItem = null
+
         // calling the buildList function
         buildList()
 
@@ -145,12 +147,29 @@
                                 <button class="btn btn-sm btn-outline-info edit">Edit </button>
                             </div> 
                             <div style="flex:1">
-                                <button class="btn btn-sm btn-outline-danger edit">Delete </button>
+                                <button class="btn btn-sm btn-outline-danger delete">Delete </button>
                             </div> 
                         </div>   
                     `
                     wrapper.innerHTML += item
                 }
+				for (i in list){
+					var editBtn = document.getElementsByClassName('edit')[i]
+					var deleteBtn = document.getElementsByClassName('delete')[i]
+
+					editBtn.addEventListener('click', (function(item){
+						return function(){
+							editItem(item)
+						}
+					})(list[i]))
+
+					deleteBtn.addEventListener('click', (function(item){
+						return function(){
+							deleteItem(item)
+						}
+					})(list[i]))
+
+				}
             })
         }
 
@@ -159,6 +178,11 @@
             e.preventDefault()
             console.log('Form submitted');
             var url = 'http://127.0.0.1:8000/api/task-create/'
+			if(activeItem != null){
+				url = `http://127.0.0.1:8000/api/task-update/${activeItem.id}/`
+				activeItem = null
+			}
+
             var title = document.getElementById("title").value
             fetch(url,{
                 method: 'POST',
@@ -173,6 +197,24 @@
                 form.reset()
             })
         })
+
+		function editItem(item){
+			activeItem=item
+			console.log("edit clicked:", activeItem);
+			document.getElementById('title').value = activeItem.title
+		}
+
+		function deleteItem(item){
+            var url = `http://127.0.0.1:8000/api/task-delete/${item.id}/`
+			fetch(url, {
+				method: 'DELETE',
+				headers: {
+					'Content-type':'application/json',
+					'X-CSRFToken': csrftoken
+				}
+			}).then((response) => buildList())
+		}
+
 
     </script>
 
