--- a/ui/templates/ui/list.html
+++ b/ui/templates/ui/list.html
@@ -136,12 +136,15 @@
             .then(function(data){
                 console.log("Data:", data);
                 var list = data
-                
                 for (i in list){
+					var task = `<span class="title">${list[i].title}</span>`
+					if(list[i].completed == true){
+						task = `<strike class="title">${list[i].title}</strike>`
+					}
                     var item = `
                         <div id="data-row-${i}" class="task-wrapper flex-wrapper">
                             <div style="flex:7">
-                                <span class="title">${list[i].title}</span>
+                                ${task}
                             </div> 
                             <div style="flex:1">
                                 <button class="btn btn-sm btn-outline-info edit">Edit </button>
@@ -156,6 +159,7 @@
 				for (i in list){
 					var editBtn = document.getElementsByClassName('edit')[i]
 					var deleteBtn = document.getElementsByClassName('delete')[i]
+					var title = document.getElementsByClassName('title')[i]
 
 					editBtn.addEventListener('click', (function(item){
 						return function(){
@@ -166,6 +170,12 @@
 					deleteBtn.addEventListener('click', (function(item){
 						return function(){
 							deleteItem(item)
+						}
+					})(list[i]))
+
+					title.addEventListener('click', (function(item){
+						return function(){
+							mark_unmark(item)
 						}
 					})(list[i]))
 
@@ -215,7 +225,17 @@
 			}).then((response) => buildList())
 		}
 
-
+		function mark_unmark(item){
+			var url = `http://127.0.0.1:8000/api/task-update/${item.id}/`
+			fetch(url, {
+				method: 'POST',
+				headers: {
+					'Content-type':'application/json',
+					'X-CSRFToken': csrftoken
+				},
+				body: JSON.stringify({'title':item.title, 'completed':!item.completed})
+			}).then((response) => buildList())
+		}
     </script>
 
 </body>
